client/a8c-for-agencies/sections/marketplace/checkout/style.scss
@import "@wordpress/base-styles/breakpoints";
@import "@wordpress/base-styles/mixins";

.checkout .a4a-layout__container,
.checkout .a4a-layout__body,
.checkout .a4a-layout__body-wrapper {
	height: 100%;
}

.checkout .a4a-layout__body {
	padding: 0;
}

.checkout__container {
	display: flex;
	flex-direction: row;
	align-items: stretch;
	height: 100%;

}

.checkout__content {
	flex-grow: 1;
}

.checkout__aside {
	background: var(--color-neutral-0);
	padding: 128px 48px;
	max-width: 443px;
}

.checkout__summary {
	display: flex;
	flex-direction: column;
	gap: 16px;

	hr {
		width: 100%;
		margin: 0;
		padding: 0;
		border: none;
	}
}

.checkout__summary-pricing {
	background-color: var(--studio-white);
	border-radius: 8px; /* stylelint-disable-line scales/radii */
	border: 1px solid var(--color-link);
	padding: 1rem;

	@media only screen and ( min-width: 782px ) {
		margin-block-start: 32px;
	}

	@include break-xlarge {
		margin-block-start: 24px;
	}

	.checkout__summary-pricing-discounted {
		font-size: 1.25rem;
		font-weight: 600;
		color: var(--studio-gray-80);
		line-height: 1;

		@include break-xlarge {
			font-size: 1.5rem;
			font-weight: 700;
			color: var(--studio-black);
		}
	}

	.checkout__summary-pricing-original {
		text-decoration: line-through;
		font-weight: 400;
		font-size: 1rem;
		margin-inline-start: 8px;
	}

	.checkout__summary-pricing-interval {
		font-size: 0.75rem;
		font-weight: 400;
		color: var(--studio-gray-60);
		line-height: 2;
	}
}

.checkout__summary-items {
	margin: 0;
}

.checkout__summary-total {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	font-weight: 500;
	font-size: 1rem;
	line-height: 1.5;
}


.checkout__summary-notice {
	color: var(--color-neutral-50);
	font-size: rem(12px);
	margin-block-end: 16px;

	a {
		text-decoration: underline;
		color: var(--color-black);
	}
}

.checkout__aside-actions {
	margin-block-start: 32px;
	display: flex;
	flex-direction: column;
	align-items: stretch;
	gap: 16px;
	text-align: center;
}

